--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,3 +23,8 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
+mqtt:
+  broker: tcp://localhost:1883
+  username: ${MQTT_USERNAME}
+  password: ${MQTT_PASSWORD}
+  client-id: spring-backend
